Add movie watch, refine main screen

--- a/src/app/pages/billboard/billboard.component.html
+++ b/src/app/pages/billboard/billboard.component.html
@@ -23,6 +23,6 @@
 </ng-container>
 </div>
 <div class="billboard__movies">
-  <app-movie-list [title]="'Trending Now'" [movies]="movies" (movieSelected)="onMovieSelected($event)" />
+  <app-movie-list [title]="title" [movies]="movies" (movieSelected)="onMovieSelected($event)" />
 </div>
 
