--- a/src/app/share/play-button/play-button.component.scss
+++ b/src/app/share/play-button/play-button.component.scss
@@ -11,6 +11,7 @@
   flex-direction: row;
   align-items: center;
   transition: 300ms;
+  cursor: pointer;
 
   &:hover {
     background-color: rgb(229 231 235);
