--- a/src/app/share/search-bar/search-bar.component.html
+++ b/src/app/share/search-bar/search-bar.component.html
@@ -1,7 +1,8 @@
 <div class="search__container">
   <div class="searchbar">
-    <input class="search_input" type="text" name="txtSearch" #txtSearch placeholder="Search..." [autocomplete]="'off'" (keyup)="onKeyUp($event)">
-    <span   (click)="onSearch(txtSearch.value)" class="search_icon"> <fa-icon class="icon" [icon]="faIcon"></fa-icon></span>
+    <span class="show-all" *ngIf='showAll'  (click)="showAllData();">Show All</span>
+    <input class="search_input" type="text" name="txtSearch" [(ngModel)]="txtSearch"  placeholder="Search..." [autocomplete]="'off'" (keyup)="onKeyUp($event)">
+    <span   (click)="onSearch()" class="search_icon"> <fa-icon class="icon" [icon]="faIcon"></fa-icon></span>
 
   </div>
 </div>
