--- a/src/app/share/search-bar/search-bar.component.scss
+++ b/src/app/share/search-bar/search-bar.component.scss
@@ -6,8 +6,17 @@
   align-items: baseline;
   opacity: 0.7;
 
+  .show-all {
+    color: white;
+    font-size: 1rem;
+    text-decoration: underline;
+    margin-right: 20px;
+    margin-left: auto;
+    cursor: pointer;
+  }
+
   .searchbar {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-top: auto;
     height: 30px;
     background-color: #353b48;
@@ -20,17 +29,16 @@
     border: 0;
     outline: 0;
     background: none;
-    width: 450px;
+    width: 20vw;
     caret-color: transparent;
-    line-height: 40px;
-    transition: width 0.4s linear;
+    line-height: 30px;
+
   }
 
   .searchbar:hover > .search_input {
-    padding: 0 10px;
-    width: 450px;
+    width: 20vw;
     caret-color: lightgreen;
-    transition: width 0.4s linear;
+
   }
 
   .searchbar:hover > .search_icon {
